--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mantine-next-template",
+  "name": "ctc_next",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
     "analyze": "ANALYZE=true next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "lint": "next lint && npm run lint:stylelint",
+    "lint": "next lint && yarn lint:stylelint",
     "lint:stylelint": "stylelint '**/*.css' --cache",
     "jest": "jest",
     "jest:watch": "jest --watch",
@@ -19,54 +19,58 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "7.3.2",
-    "@mantine/hooks": "7.3.2",
-    "@next/bundle-analyzer": "^14.0.1",
-    "@tabler/icons-react": "^2.40.0",
-    "next": "14.0.1",
+    "@mantine/core": "^7.3.2",
+    "@mantine/dates": "^7.3.2",
+    "@mantine/form": "^7.3.2",
+    "@mantine/hooks": "^7.3.2",
+    "@mantine/notifications": "^7.3.2",
+    "@next/bundle-analyzer": "^14.0.4",
+    "dayjs": "^1.11.10",
+    "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@next/eslint-plugin-next": "^14.0.1",
-    "@storybook/addon-essentials": "^7.5.2",
+    "@babel/core": "^7.23.6",
+    "@next/eslint-plugin-next": "^14.0.4",
+    "@storybook/addon-essentials": "^7.6.6",
     "@storybook/addon-styling-webpack": "^0.0.5",
-    "@storybook/blocks": "^7.5.2",
-    "@storybook/nextjs": "^7.5.2",
-    "@storybook/react": "^7.5.2",
+    "@storybook/blocks": "^7.6.6",
+    "@storybook/nextjs": "^7.6.6",
+    "@storybook/react": "^7.6.6",
     "@testing-library/dom": "^9.3.3",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.7",
-    "@types/node": "^20.8.10",
-    "@types/react": "18.2.34",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
+    "@types/react": "18.2.45",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "babel-loader": "^9.1.3",
-    "eslint": "^8.53.0",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-mantine": "3.0.0",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-config-mantine": "3.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^6.1.0",
+    "eslint-plugin-testing-library": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "1.12.0",
+    "postcss": "^8.4.32",
+    "postcss-preset-mantine": "1.12.1",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.0.3",
-    "storybook": "^7.5.2",
-    "storybook-dark-mode": "^3.0.1",
-    "stylelint": "^15.11.0",
-    "stylelint-config-standard-scss": "^11.1.0",
+    "prettier": "^2.8.8",
+    "storybook": "^7.6.6",
+    "storybook-dark-mode": "^3.0.3",
+    "stylelint": "^16.0.2",
+    "stylelint-config-standard-scss": "^12.0.0",
     "ts-jest": "^29.1.1",
-    "typescript": "5.2.2"
+    "typescript": "5.3.3",
+    "webpack": "^5.89.0"
   },
-  "packageManager": "yarn@4.0.1"
+  "packageManager": "yarn@4.0.2"
 }
